[gd_scene load_steps=12 format=3 uid="uid://b7docv1f2u3yf"]

[ext_resource type="Texture2D" uid="uid://dms8he1bg1pic" path="res://assets/background/rocks_2.png" id="1_c3ecc"]
[ext_resource type="Script" uid="uid://cv58a8uqi2sda" path="res://scenes/game/game.gd" id="1_lqp2x"]
[ext_resource type="PackedScene" uid="uid://dvaalq0kogm3b" path="res://scenes/scrolling_bg/scrolling_bg.tscn" id="2_2ydko"]
[ext_resource type="PackedScene" uid="uid://drvtcahboevuc" path="res://scenes/parallax_image/parallax_image.tscn" id="2_4y04i"]
[ext_resource type="PackedScene" uid="uid://q4fqmne0pajr" path="res://scenes/plane/plane.tscn" id="2_6j864"]
[ext_resource type="PackedScene" uid="uid://cbrdvfcypxkbw" path="res://scenes/gameoverui/game_over_ui.tscn" id="2_yvooa"]
[ext_resource type="PackedScene" uid="uid://dl8ssxkjcpdi3" path="res://scenes/barrier/barrier.tscn" id="3_gw70u"]
[ext_resource type="PackedScene" uid="uid://clmopoieua4ms" path="res://scenes/hud/hud.tscn" id="3_kv0l8"]
[ext_resource type="Texture2D" uid="uid://bhsc7c80cvmtt" path="res://assets/background/sky.png" id="3_o22r4"]
[ext_resource type="Texture2D" uid="uid://cl4tu1vosfqfp" path="res://assets/background/clouds_2.png" id="4_5od4h"]
[ext_resource type="Texture2D" uid="uid://b4tqooe7uc7k0" path="res://assets/background/rocks_1.png" id="5_e3cxj"]

[node name="Game" type="Node2D"]
script = ExtResource("1_lqp2x")

[node name="ParallaxBG" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = -100
position = Vector2(0, 427)

[node name="ParallaxImage" parent="ParallaxBG" instance=ExtResource("2_4y04i")]
scroll_scale = Vector2(0, 0)
texture = ExtResource("3_o22r4")

[node name="ParallaxImage2" parent="ParallaxBG" instance=ExtResource("2_4y04i")]
scroll_scale = Vector2(0, 0)
autoscroll = Vector2(-20, 0)
texture = ExtResource("4_5od4h")

[node name="ParallaxImage3" parent="ParallaxBG" instance=ExtResource("2_4y04i")]
scroll_scale = Vector2(0, 0)
autoscroll = Vector2(-50, 0)
texture = ExtResource("5_e3cxj")

[node name="ParallaxImage4" parent="ParallaxBG" instance=ExtResource("2_4y04i")]
scroll_scale = Vector2(0, 0)
autoscroll = Vector2(-80, 0)
texture = ExtResource("1_c3ecc")

[node name="ScrollingBG" parent="." instance=ExtResource("2_2ydko")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUI" parent="CanvasLayer" instance=ExtResource("2_yvooa")]
unique_name_in_owner = true
visible = false

[node name="Hud" parent="CanvasLayer" instance=ExtResource("3_kv0l8")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(393, 358)
texture = ExtResource("1_c3ecc")

[node name="Plane" parent="." instance=ExtResource("2_6j864")]
z_index = 2
position = Vector2(70, 335)

[node name="Barrier" parent="." instance=ExtResource("3_gw70u")]
position = Vector2(0, -20)
rotation = 3.14159

[node name="Barrier2" parent="." instance=ExtResource("3_gw70u")]
position = Vector2(0, 870)

[node name="SpawnU" type="Marker2D" parent="."]
position = Vector2(530, 345)

[node name="SpawnL" type="Marker2D" parent="."]
position = Vector2(530, 540)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="PipesHolder" type="Node" parent="."]

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
